feat: Adicionar endpoint para criar marca e configurar SQLite

--- a/src/OPME.StockManagement.WebAPI/appsettings.json
+++ b/src/OPME.StockManagement.WebAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=OPMEStockManagement;Trusted_Connection=true;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source=OPMEStockManagement.db"
   },
   "Logging": {
     "LogLevel": {
