feat: implementar validação de DTOs com FluentValidation
- Adicionar pacotes FluentValidation e FluentValidation.AspNetCore
- Criar CreateSupplierDtoValidator com validações de Nome, CNPJ, Telefone e Email
- Criar CreateProductDtoValidator com validações de CodigoProduto, NomeProduto, SupplierId e BrandId
- Criar UpdateStockDtoValidator com validação de Quantidade
- Configurar validação automática no Program.cs
- Validar formatos CNPJ, email e telefone
- Mensagens de erro em português

--- a/src/OPME.StockManagement.Application/OPME.StockManagement.Application.csproj
+++ b/src/OPME.StockManagement.Application/OPME.StockManagement.Application.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\OPME.StockManagement.Domain\OPME.StockManagement.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="11.9.0" />
+  </ItemGroup>
+
 </Project>
