--- a/src/OPME.StockManagement.WebAPI/OPME.StockManagement.WebAPI.csproj
+++ b/src/OPME.StockManagement.WebAPI/OPME.StockManagement.WebAPI.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+    <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
   </ItemGroup>
 
 </Project>
