--- a/src/OPME.StockManagement.Application/OPME.StockManagement.Application.csproj
+++ b/src/OPME.StockManagement.Application/OPME.StockManagement.Application.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="FluentValidation" Version="11.9.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.0" />
   </ItemGroup>
 
 </Project>
